# cmake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pro
A/: preparing.py
B/: CMakeLists.txt  Makefile  cmake_install.cmake
C/: main.cpp  main.h
